@@ -10,6 +10,7 @@ XX/XX/25
 * Fixed UI hang when manually refreshing scripts or SPCC (#1566)
 * Fixed incorrect behaviour when using set_image_pixeldata to chage the number of channels (#1570)
 * Fixed incorrect siril command return values (#1569)
+* Fixed crash in astrometric registration when the reference image could not be platesolved (#1557)
 
 **Improvements:**
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
